[gd_scene load_steps=2 format=3 uid="uid://bjrcey32pfk8y"]

[ext_resource type="Script" uid="uid://iq26w64axtem" path="res://scenes/Multiplayer/MultiplayerGame/ThreadBufferPanel.gd" id="1_script"]

[node name="ThreadBufferPanel" type="PanelContainer"]
custom_minimum_size = Vector2(0, 120)
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ThreadLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Thread X's Buffer"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="CardContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 8
